--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
       <a href="mailto:jfeldman777@gmail.com">напишите письмо администратору</a> и укажите свой логин
 <hr>
     В данный момент я работаю над содержанием знаний - следить за ходом работы
-    <a tdrget="hbt" href="http://hbtjournal.com/m/index.html">можно здесь </a> 
+    <a target="hbt" href="http://hbtjournal.com/m/index.html">можно здесь </a>
       <hr>
       {% if user.is_superuser %}
         (<a href="/admin/">Admin-panel</a>)
